<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logDisplayRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="32dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/exerciseInputEditText" />

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseInputEditText" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter exercise"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/weightInputEditText" />

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightInputEditText" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter a weight"
        android:inputType="numberDecimal"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/repInputEditText" />

    <TextView
        android:id="@+id/repLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reps"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/repInputEditText" />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter reps"
        android:inputType="number"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logButton" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOG!"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>